--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 body {
+    font-size: 1.5em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image: url(./BuddhASketch.svg);
     color: teal
+}
+
+.flex {
+    display: flex;
+}
+
+.column {
+    flex-direction: column;
 }
