--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+* {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
 body {
     font-size: 1.5em;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-image: url(./BuddhASketch.svg);
-    color: teal
+    background-image: url(./starry-background.jpg);
+    color: teal;
+
 }
 
 .flex {
@@ -11,4 +18,12 @@ body {
 
 .column {
     flex-direction: column;
+}
+
+img {
+    max-width: 30vw;
+}
+
+h2 {
+    max-width: 30vw;
 }
