--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image: url(./starry-background.jpg);
     color: teal;
-
+    margin-top: 2em;
 }
 
 .flex {
@@ -22,8 +22,14 @@ body {
 
 img {
     max-width: 30vw;
+    border-radius: 2rem;
 }
 
 h2 {
     max-width: 30vw;
+}
+
+#footer {
+    /* margin-top: 2em; */
+    font-size: .7em;
 }
