--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    font-size: 1.5em;
+    font-size: 100%;
+    font-size: 1.5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image: url(./starry-background.jpg);
     color: teal;
@@ -20,7 +21,12 @@ body {
     flex-direction: column;
 }
 
+img {
+    border-radius: 2rem;
+    width: 24rem;
+}
+
 #footer {
-    /* margin-top: 2em; */
-    font-size: .7em;
+    margin-top: 0,5em;
+    font-size: 1em;
 }
