--- a/style.css
+++ b/style.css
@@ -26,7 +26,11 @@ img {
     width: 24rem;
 }
 
+#panel {
+    gap: 0.2rem;
+}
+
 #footer {
-    margin-top: 0,5em;
-    font-size: 1em;
+    margin-top: 0.2rem;
+    font-size: 1rem;
 }
