--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    text-shadow: #101520 0.025em 0.05em;
+    box-shadow: #101520 0.025em 0.05em;
 }
 
 body {
