--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     font-size: 1.5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image: url(./starry-background.jpg);
-    color: teal;
+    color: #00a0a0;
     margin-top: 2em;
 }
 
@@ -22,6 +22,10 @@ body {
     flex-direction: column;
 }
 
+:link {
+    color: #0088ff;
+}
+
 img {
     border-radius: 2rem;
     width: 24rem;
@@ -30,6 +34,20 @@ img {
 
 #panel {
     gap: 0.2rem;
+}
+
+#contactButton {
+    border-radius: 1rem;
+    box-shadow:  #050710 0.03em 0.06em;
+    text-shadow: #055050 0.03em 0.06em;
+    text-decoration: none;
+    font-size: 2rem;
+    background-color: #009090;;
+    color: #cceeff;
+    width: 14rem;
+    aspect-ratio: 4;
+    font-weight: 800;
+    margin-bottom: 1rem;
 }
 
 #footer {
