--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -6,19 +6,19 @@
  *
  */
 
-:root {
+/* :root {
   --qwik-dark-blue: #006ce9;
   --qwik-light-blue: #18b6f6;
   --qwik-light-purple: #ac7ff4;
   --qwik-dark-purple: #713fc2;
-}
+} */
 
 body {
   background-color: #fafafa;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   padding: 20px 20px 40px 20px;
 }
-
+/* 
 main {
   max-width: 760px;
   margin: 0 auto;
@@ -116,10 +116,10 @@ a.mindblow {
   cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🤯</text></svg>")
       16 0,
     auto; /*!emojicursor.app*/
-}
+/* }
 
 a.mindblow:hover {
   border-bottom-width: 0px;
   margin-bottom: 4px;
   transform: translateY(4px);
-}
+} */ 
