--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -14,112 +14,70 @@
 } */
 
 body {
-  background-color: #fafafa;
+  background-color: #00141a;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   padding: 20px 20px 40px 20px;
 }
-/* 
-main {
-  max-width: 760px;
-  margin: 0 auto;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0px 0px 130px -50px var(--qwik-light-purple);
-  overflow: hidden;
-}
 
-h1,
-h2 {
-  margin: 0 0 5px 0;
-}
+/* Copied from pre-qwik site */
 
-.lightning {
-  filter: hue-rotate(180deg);
-}
-
-section {
-  padding: 20px;
-  border-bottom: 10px solid var(--qwik-dark-blue);
-}
-
-ul {
-  list-style-type: square;
-  margin: 5px 0 30px 0;
-  padding-left: 25px;
-}
-
-li {
-  padding: 8px 0;
-}
-
-li::marker {
-  color: var(--qwik-light-blue);
-}
-
-a,
-a:visited {
-  color: var(--qwik-dark-blue);
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-table.commands {
-  margin: 0 0 30px 0;
-}
-
-.commands td {
-  padding: 5px;
-}
-
-.commands td:first-child {
-  white-space: nowrap;
-  padding-right: 20px;
-}
-
-code {
-  font-family: Menlo, Monaco, Courier New, monospace;
-  font-size: 0.9em;
-  background-color: rgb(224, 224, 224);
-  padding: 2px 4px;
-  border-radius: 3px;
-  border-bottom: 2px solid #bfbfbf;
-}
-
-footer {
-  padding: 15px;
+* {
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  font-size: 0.8em;
+  text-shadow: #050710 0.03em 0.06em;
 }
 
-footer a {
+body {
+  font-size: 100%;
+  font-size: 1.5rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-image: url(./starry-background.jpg);
+  color: #00a0a0;
+  margin-top: 2em;
+}
+
+.flex {
+  display: flex;
+}
+
+.column {
+  flex-direction: column;
+}
+
+:link {
+  color: #0088ff;
+}
+
+:visited {
+  color: #004886;
+}
+
+img {
+  border-radius: 2rem;
+  width: 24rem;
+  box-shadow:  #050710 0.03em 0.06em;
+}
+
+#panel {
+  gap: 0.2rem;
+}
+
+#contactButton {
+  border-radius: 1rem;
+  box-shadow:  #050710 0.03em 0.06em;
+  text-shadow: #055050 0.03em 0.06em;
   text-decoration: none;
+  font-size: 2rem;
+  background-color: #009090;;
+  color: #cceeff;
+  width: 14rem;
+  aspect-ratio: 4;
+  font-weight: 800;
+  margin-bottom: 1rem;
 }
 
-footer a:hover {
-  text-decoration: underline;
+#footer {
+  margin-top: 0.2rem;
+  font-size: 1rem;
 }
-
-a.mindblow {
-  margin: 0 auto;
-  display: block;
-  background: var(--qwik-dark-purple);
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: 0;
-  color: white;
-  text-decoration: none;
-  font-size: 20px;
-  width: fit-content;
-  border-bottom: 4px solid black;
-  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🤯</text></svg>")
-      16 0,
-    auto; /*!emojicursor.app*/
-/* }
-
-a.mindblow:hover {
-  border-bottom-width: 0px;
-  margin-bottom: 4px;
-  transform: translateY(4px);
-} */ 
