--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -14,7 +14,7 @@
 } */
 
 body {
-  background-color: #00141a;
+  background-color: #000406;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   padding: 20px 20px 40px 20px;
 }
