--- a/qwik-app/src/components/responseButton/responseButton.css
+++ b/qwik-app/src/components/responseButton/responseButton.css
@@ -1,4 +1,4 @@
 button {
-  background-color: var(--kaBeech-screen-text);
-  color: var(--kaBeech-idle-screen);
+  /* background-color: var(--kaBeech-screen-background);
+  color: var(--kaBeech-screen-foreground); */
 }
