--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -1,7 +1,7 @@
 
 .lazy {
 border-style: solid;
-background-color: var(--kaBeech-idle-screen);
+background-color: var(--kaBeech-screen-background);
 border-radius: 0.3em;
 height: max-content;
 width: 80%;
