--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -7,15 +7,20 @@
  */
 
 :root {
-  --kaBeech-starry-field: #000406;
-  --kaBeech-idle-screen: #00141a;
-  --kaBeech-screen-text: #00a0a0;
-  --kaBeech-link-unvisited: #0088ff;
-  --kaBeech-link-visited: #004886;
+  --kaBeech-color-starry-field: #000406;
+  --kaBeech-color-terminal-idle: #00141a;
+  --kaBeech-color-terminal-text: #00a0a0;
+  --kaBeech-color-photonsword: #0088ff;
+  --kaBeech-color-distant-planet: #004886;
+  --kaBeech-main-background: var(--kaBeech-color-starry-field);
+  --kaBeech-screen-background: var(--kaBeech-color-terminal-idle);
+  --kaBeech-screen-foreground: var(--kaBeech-color-terminal-text);
+  --kaBeech-link-unvisited: var(--kaBeech-color-photonsword);
+  --kaBeech-link-visited: var(--kaBeech-color-distant-planet);
 }
 
 body {
-  background-color: var(--kaBeech-starry-field);
+  background-color: var(--kaBeech-main-background);
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   padding: 20px 20px 40px 20px;
 }
@@ -25,8 +30,8 @@ button {
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
-  background-color: inherit;
-  color: inherit;
+  background-color: var(--kaBeech-screen-foreground);
+  color: var(--kaBeech-screen-background);
   border-width: 0.2em;
 }
 
@@ -44,7 +49,7 @@ body {
   font-size: 1.5rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-image: url(./starry-background.jpg);
-  color: var(--kaBeech-screen-text);
+  color: var(--kaBeech-screen-foreground);
   margin-top: 2em;
 }
 
