--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -25,6 +25,20 @@ body {
   padding: 20px 20px 40px 20px;
 }
 
+ul {
+	list-style: none;
+}
+
+a, ul, li {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+  text-decoration: none;
+	vertical-align: baseline;
+}
+
 button {
   font-family: inherit;
   font-size: 100%;
