--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -91,7 +91,7 @@ body {
   font-size: 100%;
   font-size: 1.5rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-image: url(../public/starry-background.jpg);
+  background-image: url(/starry-background.jpg);
   color: var(--kaBeech-screen-foreground);
   margin-top: 2em;
 }
