--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -159,7 +159,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-image: url(/starry-background.jpg);
   color: var(--kaBeech-screen-foreground);
-  margin-top: 2em;
+  /* margin-top: 2em; */
 }
 
 .flex {
