--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -5,6 +5,8 @@
 border-radius: 1em;
 border-color: var(--kaBeech-main-background);
 height: max-content;
-width: 80%;
+width: 100%;
+/* width: 80vw; */
+/* height: 80vh; */
 }
 
