--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -108,6 +108,14 @@ button {
   justify-content: space-between;
 }
 
+.alignStart {
+  align-items: flex-start;
+}
+
+.alignStretch {
+  align-items: stretch;
+}
+
 .width100 {
   width: 100%;
 }
@@ -130,10 +138,6 @@ button {
 
 .roundCornersBottom {
   border-radius: 0 0 0.8em 0.8em;
-}
-
-.alignStretch {
-  align-items: stretch;
 }
 
 .transparent {
@@ -159,7 +163,8 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-image: url(/starry-background.jpg);
   color: var(--kaBeech-screen-foreground);
-  /* margin-top: 2em; */
+  margin: 0.5em 0;
+  padding: 0;
 }
 
 .flex {
