--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -6,6 +6,7 @@ border-radius: 1em;
 border-color: var(--kaBeech-main-background);
 height: max-content;
 width: 100%;
+margin: 0.5em;
 /* width: 80vw; */
 /* height: 80vh; */
 }
