--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -4,9 +4,11 @@
     border-style: solid;
 border-radius: 1em;
 border-color: var(--kaBeech-main-background);
-height: max-content;
+height: 100%;
 width: 100%;
 margin: 0.5em;
+/* align-self: stretch;
+justify-self: stretch; */
 /* width: 80vw; */
 /* height: 80vh; */
 }
