--- a/qwik-app/src/components/logo/logo.css
+++ b/qwik-app/src/components/logo/logo.css
@@ -1,32 +1,34 @@
-
 .lazyflex {
-    display: flex;
-    gap: 1em;
+  display: flex;
+  gap: 1em;
 }
 
 .lazylogo {
-    font-size: 1.5em;
-    background-color: black;
-    color: aqua;
-    padding: 0.5em;
+  font-size: 1.5em;
+  background-color: black;
+  color: aqua;
+  padding: 0.5em;
 }
 
 .lazyalign {
-    align-items: center;
-    justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .lazyLogo {
-    border-style: solid;
-    border-color: var(--kaBeech-screen-foreground);
-    border-radius: 1em;
-    width: 3.34em;
-    aspect-ratio: 1;
-    background-image: url(/favicon.svg);
-    margin: 0.7em 0.5em;
+  border-style: solid;
+  border-width: 0.1em;
+  /* border-color: linear-gradient(var(--kaBeech-color-beechy-top), var(--kaBeech-color-beechy-bottom)); */
+  border-color: rgba(23, 129, 86, 0.19);
+  border-radius: 1em;
+  box-shadow: 0 0em 0.4em 0.05em rgba(0, 160, 149, 0.362),
+    0 0em 2.5em 0 rgba(1, 89, 125, 0.412);
+  width: 3.34em;
+  aspect-ratio: 1;
+  background-image: url(/favicon.svg);
+  margin: 0.7em 0.5em;
 }
 
 li {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
-
