--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -16,11 +16,20 @@
   /* align-self: stretch;
 justify-self: stretch; */
   /* width: 80vw; */
-  /* height: 80vh;
-  overflow: auto; */
+  height: 89vh;
+  /* overflow: auto; */
+  justify-content: space-between;
+  align-items: stretch;
+  align-content: stretch;
 }
 
 .lazyScroll {
-  height: 69vh;
-  overflow: auto;
+  /* height: 69vh; */
+  /* overflow: auto; */
+  /* justify-self: stretch; */
+  /* justify-content: space-between; */
+  flex-grow: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
