--- a/qwik-app/src/components/responseButton/responseButton.css
+++ b/qwik-app/src/components/responseButton/responseButton.css
@@ -1,10 +1,10 @@
 button {
   /* background-color: var(--kaBeech-screen-background);
   color: var(--kaBeech-screen-foreground); */
-  width: 4em;
-  aspect-ratio: 1;
+  height: 2.5em;
   background-color: transparent;
   border-style: none;
   opacity: 1;
   cursor: pointer;
+  margin: 0 1em;
 }
