--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -133,7 +133,8 @@ button {
 .scrollAuto {
   overflow: auto;
   flex: 1 1 auto;
-  height: 30vh;
+  height: 0;
+  /* padding: auto; */
   /* align-self: stretch; */
   /* padding: 0 8em; */
 }
@@ -171,8 +172,8 @@ button {
 }
 
 .fg100 {
-  flex-grow: 100;
-  justify-content: space-between;
+  flex-grow: 10;
+  /* justify-content: space-between; */
 }
 
 .width100 {
