--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -123,6 +123,28 @@ button {
   );
 }
 
+.screenContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.screenContents {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  overflow: auto;
+  flex: 1 1 auto;
+  height: 0;
+  /* padding: auto; */
+  /* align-self: stretch; */
+  /* padding: 0 8em; */
+}
+
+.screenContents p {
+  width: 48em;
+}
+
 .beechyTop {
   background-color: var(--kaBeech-color-beechy-top);
 }
@@ -133,19 +155,6 @@ button {
 
 .noBoxShadow {
   box-shadow: none;
-}
-
-.scrollAuto {
-  overflow: auto;
-  flex: 1 1 auto;
-  height: 0;
-  /* padding: auto; */
-  /* align-self: stretch; */
-  /* padding: 0 8em; */
-}
-
-.scrollAuto p {
-  max-width: 48em;
 }
 
 .smallText {
