--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -145,6 +145,22 @@ button {
   width: 48em;
 }
 
+#screenContents {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  overflow: auto;
+  flex: 1 1 auto;
+  height: 0;
+  /* padding: auto; */
+  /* align-self: stretch; */
+  /* padding: 0 8em; */
+}
+
+#screenContents p {
+  width: 48em;
+}
+
 .beechyTop {
   background-color: var(--kaBeech-color-beechy-top);
 }
