--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -201,6 +201,10 @@ button {
   justify-self: stretch;
 }
 
+.justifyCenter {
+  justify-content: center;
+}
+
 .fg100 {
   flex-grow: 10;
   /* justify-content: space-between; */
