--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -11,6 +11,32 @@
   flex-direction: column;
 }
 
+/* Scrollbars for Firefox */
+* {
+  /* scrollbar-width: thin; */
+  scrollbar-color: var(--kaBeech-screen-midground) transparent;
+}
+
+/* Scrollbars for Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 0.2em;
+}
+
+*::-webkit-scrollbar-track {
+  /* background: orange; */
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--kaBeech-screen-midground-transparent);
+  box-shadow: 0 0em 0.5em 0.1em rgba(0, 20, 26, 0.964),
+    0 0em 0.4em 0.05em rgba(0, 160, 157, 0.515),
+    0 0em 1em 0 rgba(1, 90, 125, 0.484);
+  border-radius: 20px;
+  /* border: 3px solid orange; */
+}
+
+/*  */
+
 :root {
   --kaBeech-color-beechy-top: #178155;
   --kaBeech-color-beechy-bottom: #00587d;
@@ -21,7 +47,8 @@
   --kaBeech-color-terminal-idle: #00141a;
   --kaBeech-color-terminal-idle-transparent: #00141a00;
   --kaBeech-color-terminal-text: #00a0a0;
-  --kaBeech-color-algae: #007d7d;
+  --kaBeech-color-algae-transparent: #00333aa8;
+  --kaBeech-color-algae: #00333a;
   --kaBeech-color-photonsword: #0088ff;
   --kaBeech-color-distant-planet: #004886;
   --kaBeech-color-solar-wind: #eb3305;
@@ -36,6 +63,9 @@
     --kaBeech-color-terminal-idle-transparent
   );
   --kaBeech-screen-midground: var(--kaBeech-color-algae);
+  --kaBeech-screen-midground-transparent: var(
+    --kaBeech-color-algae-transparent
+  );
   --kaBeech-screen-foreground: var(--kaBeech-color-terminal-text);
   --kaBeech-link-visited: var(--kaBeech-color-photonsword);
   --kaBeech-link-unvisited: var(--kaBeech-color-distant-planet);
