--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -53,7 +53,7 @@
   --kaBeech-color-distant-planet: #004886;
   --kaBeech-color-solar-wind: #eb3305;
   --kaBeech-color-easter-moss: #00b63a;
-  --kaBeech-color-easter-mosss: #f800f0;
+  --kaBeech-color-ultraberry: #520052;
 }
 
 :root {
@@ -71,7 +71,7 @@
   --kaBeech-link-unvisited: var(--kaBeech-color-distant-planet);
   --kaBeech-cancel: var(--kaBeech-color-solar-wind);
   --kaBeech-response: var(--kaBeech-color-response);
-  --kaBeech-response-text: var(--kaBeech-color-easter-mosss);
+  --kaBeech-response-text: var(--kaBeech-color-ultraberry);
 }
 
 body {
