--- a/qwik-app/src/components/responseDetail/responseDetail.css
+++ b/qwik-app/src/components/responseDetail/responseDetail.css
@@ -13,12 +13,15 @@
 }
 
 .lazyColor {
-  /* background-image: linear-gradient(rgba(0, 0, 0, 0.127), rgba(0, 0, 0, 0.252)); */
-  /* box-shadow: 0 0em 0.4em 0.05em rgba(0, 0, 0, 0.209),
-    0 0em 1.5em 0 rgba(0, 0, 0, 0.085); */
-  /* border-radius: 1em; */
-  /* padding: 1em; */
-  /* margin-bottom: 0.5em; */
+  background-image: linear-gradient(
+    rgba(255, 255, 255, 0.127),
+    rgba(255, 255, 255, 0.252)
+  );
+  box-shadow: 0 0em 0.4em 0.05em rgba(255, 255, 255, 0.154),
+    0 0em 1.5em 0 rgba(255, 255, 255, 0.085);
+  border-radius: 1em;
+  padding: 0.5em 0.8em;
+  margin-bottom: 0.5em;
   gap: 0.5em;
 }
 
