--- a/qwik-app/src/routes/flower/flower.css
+++ b/qwik-app/src/routes/flower/flower.css
@@ -53,6 +53,18 @@ input {
   );
 }
 
+.helix {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  overflow: auto;
+  flex: 1 1 auto;
+  height: 0;
+  /* padding: auto; */
+  /* align-self: stretch; */
+  /* padding: 0 8em; */
+}
+
 .pride .square:nth-child(12n + 1) {
   background: #e70074;
 }
