--- a/qwik-app/src/components/logo/logo.css
+++ b/qwik-app/src/components/logo/logo.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
 }
 
-.lazyLogo {
+img {
   border-style: solid;
   border-width: 0.1em;
   /* border-color: linear-gradient(var(--kaBeech-color-beechy-top), var(--kaBeech-color-beechy-bottom)); */
@@ -25,7 +25,6 @@
     0 0em 2.5em 0 rgba(1, 89, 125, 0.412);
   width: 3.34em;
   aspect-ratio: 1;
-  background-image: url(/favicon.svg);
   margin: 0.7em 0.5em;
 }
 
