--- a/qwik-app/src/components/responseDetail/responseDetail.css
+++ b/qwik-app/src/components/responseDetail/responseDetail.css
@@ -1,11 +1,14 @@
 .lazyButton {
-  /* background-color: var(--kaBeech-screen-background);
-    color: var(--kaBeech-screen-foreground); */
+  box-shadow: 0 0em 0.2em 0.05em rgba(0, 160, 160, 0.507),
+    0 0em 0.2em 0 rgba(0, 160, 160, 0.674);
 }
 
 .lazyCancel {
   background-color: var(--kaBeech-cancel);
   color: var(--kaBeech-screen-background);
+  box-shadow: 0 0em 0.2em 0.05em rgba(235, 51, 5, 0.507),
+    0 0em 0.2em 0 rgba(235, 51, 5, 0.674);
+  /* opacity: 0.5; */
 }
 
 .lazy {
@@ -29,4 +32,6 @@ button {
   font-size: 1.5em;
   width: 1.5em;
   aspect-ratio: 1;
+  border-style: none;
+  border-radius: 0.5em;
 }
