Update screen width

--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -162,6 +162,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  flex: 1;
 }
 
 .screenContents {
@@ -227,6 +228,10 @@ button {
 .fg100 {
   flex-grow: 10;
   /* justify-content: space-between; */
+}
+
+.vw100 {
+  width: 100vw;
 }
 
 .width100 {
