--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -1,7 +1,6 @@
 .lazy {
   background-color: var(--kaBeech-screen-background);
   border-style: none;
-
   border-radius: 1em;
   /* border-color: var(--kaBeech-main-background); */
   border-color: rgba(23, 129, 86, 0.19);
@@ -9,8 +8,8 @@
   box-shadow: 0 0em 0.5em 0.1em rgba(0, 20, 26, 0.964),
     0 0em 0.4em 0.05em rgba(0, 160, 139, 0.515),
     0 0em 2.5em 0 rgba(1, 90, 125, 0.484);
-  height: 100%;
-  width: 100%;
+  /* height: 100%; */
+  /* width: 100%; */
   margin: 0.5em;
   /* padding: 0.1em;  */
   /* align-self: stretch;
@@ -18,9 +17,10 @@ justify-self: stretch; */
   /* width: 80vw; */
   height: 92vh;
   /* overflow: auto; */
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: stretch;
-  align-content: stretch;
-  align-self: stretch;
-  flex: 1;
+  /* align-content: stretch; */
+  /* align-self: stretch; */
+  justify-content: stretch;
+  flex: 1 1 auto;
 }
