--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -51,7 +51,7 @@
   --kaBeech-color-algae: #00333a;
   --kaBeech-color-photonsword: #0088ff;
   --kaBeech-color-distant-planet: #004886;
-  --kaBeech-color-solar-wind: #eb3305;
+  --kaBeech-color-solar-wind: #d42a00;
   --kaBeech-color-easter-moss: #00b63a;
   --kaBeech-color-ultraberry: #520052;
 }
