--- a/qwik-app/src/routes/flower/flower.css
+++ b/qwik-app/src/routes/flower/flower.css
@@ -65,6 +65,10 @@ input {
   /* padding: 0 8em; */
 }
 
+.lazy {
+  flex: 1;
+}
+
 .romanesca {
   align-items: flex-start;
   align-content: center;
