--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -172,7 +172,7 @@ button {
   overflow: auto;
   flex: 1 1 auto;
   height: 0;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   /* padding: auto; */
   /* align-self: stretch; */
   /* padding: 0 8em; */
