--- a/qwik-app/src/components/responseButton/responseButton.css
+++ b/qwik-app/src/components/responseButton/responseButton.css
@@ -7,6 +7,17 @@ button {
   opacity: 1;
   cursor: pointer;
   margin: 0 1em;
+  /* flex: 1 1 auto; */
+}
+
+img {
+  width: 4em;
+  padding: 0.5em;
+  /* flex: 1 1 auto; */
+}
+
+svg {
+  width: 80em;
 }
 
 .semitransparent {
