--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -6,6 +6,10 @@
  *
  */
 
+.hfc {
+  min-height: fit-content;
+}
+
 :root {
   display: flex;
   flex-direction: column;
@@ -13,7 +17,7 @@
 
 /* Scrollbars for Firefox */
 * {
-  /* scrollbar-width: thin; */
+  scrollbar-width: thin;
   scrollbar-color: var(--kaBeech-screen-midground) transparent;
 }
 
@@ -28,9 +32,9 @@
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--kaBeech-screen-midground-transparent);
-  box-shadow: 0 0em 0.5em 0.1em rgba(0, 20, 26, 0.964),
+  /* box-shadow: 0 0em 0.5em 0.1em rgba(0, 20, 26, 0.964),
     0 0em 0.4em 0.05em rgba(0, 160, 157, 0.515),
-    0 0em 1em 0 rgba(1, 90, 125, 0.484);
+    0 0em 1em 0 rgba(1, 90, 125, 0.484); */
   border-radius: 20px;
   /* border: 3px solid orange; */
 }
@@ -181,7 +185,7 @@ button {
 }
 
 .screenContents p {
-  width: 48em;
+  max-width: 48em;
 }
 
 .beechyTop {
@@ -329,11 +333,11 @@ body {
   color: var(--kaBeech-link-visited);
 }
 
-img {
+/* img {
   border-radius: 2rem;
   width: 24rem;
   box-shadow: #050710 0.03em 0.06em;
-}
+} */
 
 #panel {
   gap: 0.2rem;
