--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -9,13 +9,13 @@
     0 0em 0.4em 0.05em rgba(0, 160, 139, 0.515),
     0 0em 2.5em 0 rgba(1, 90, 125, 0.484);
   /* height: 100%; */
-  /* width: 100%; */
+  width: 100%;
   margin: 0.5em;
   /* padding: 0.1em;  */
   /* align-self: stretch;
 justify-self: stretch; */
   /* width: 80vw; */
-  height: 92vh;
+  height: 89vh;
   /* overflow: auto; */
   /* justify-content: space-between; */
   align-items: stretch;
