--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -23,4 +23,5 @@ justify-self: stretch; */
   /* align-self: stretch; */
   justify-content: stretch;
   flex: 1 1 auto;
+  justify-self: stretch;
 }
