--- a/qwik-app/src/components/responseButton/responseButton.css
+++ b/qwik-app/src/components/responseButton/responseButton.css
@@ -6,18 +6,19 @@ button {
   border-style: none;
   opacity: 1;
   cursor: pointer;
-  margin: 0 1em;
+  /* margin: 0 1em; */
   padding: 0;
   /* flex: 1 1 auto; */
   /* max-width: 4em; */
 }
 
 img {
-  min-width: 1em;
+  /* min-width: 1em; */
   width: 3em;
-  max-width: 100%;
+  max-width: 80%;
   /* width: clamp(1em, 4em, 100%); */
   padding: 0.5em 0;
+  margin: 0 auto;
   /* padding: 0; */
   /* flex: 1 1 auto; */
 }
