--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -22,6 +22,10 @@
   display: flex;
 }
 
+.tinyHide {
+  display: none;
+}
+
 @media (max-width: 1000px) {
   .mobileHide {
     display: none;
@@ -29,8 +33,20 @@
   .mobileShow {
     display: flex;
   }
+  .tinyHide {
+    display: flex;
+  }
   .mobileSpacing {
     justify-content: space-between;
+  }
+}
+
+@media (max-width: 408px) {
+  .tinyHide {
+    display: none;
+  }
+  .mobileSpacing {
+    justify-content: space-evenly;
   }
 }
 
@@ -226,6 +242,19 @@ button {
   /* padding: 0 8em; */
 }
 
+.screenContents12 {
+  /* display: flex; */
+  flex-direction: column;
+  /* align-self: stretch; */
+  overflow: auto;
+  flex: 1 1 auto;
+  height: 0;
+  /* justify-content: space-between; */
+  /* padding: auto; */
+  /* align-self: stretch; */
+  /* padding: 0 8em; */
+}
+
 .screenContents p {
   max-width: 48em;
 }
@@ -256,6 +285,10 @@ button {
 
 .spaceEvenly {
   justify-content: space-evenly;
+}
+
+.spaceAround {
+  justify-content: space-around;
 }
 
 .alignStart {
