--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -98,6 +98,7 @@
   --kaBeech-color-solar-wind: #d42a00;
   --kaBeech-color-easter-moss: #00b63a;
   --kaBeech-color-ultraberry: #520052;
+  --kaBeech-color-atomic-fuchsian: #db31db;
 }
 
 :root {
@@ -116,6 +117,7 @@
   --kaBeech-cancel: var(--kaBeech-color-solar-wind);
   --kaBeech-response: var(--kaBeech-color-response);
   --kaBeech-response-text: var(--kaBeech-color-ultraberry);
+  --kaBeech-response-text-light: var(--kaBeech-color-atomic-fuchsian);
 }
 
 body {
@@ -151,6 +153,14 @@ button {
   border-width: 0.2em;
   border-style: none;
   border-radius: 0.25em;
+}
+
+.responseText {
+  color: var(--kaBeech-response-text);
+}
+
+.responseTextLight {
+  color: var(--kaBeech-response-text-light);
 }
 
 .midground {
