Add padding to screen content

--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -249,7 +249,7 @@ button {
   /* justify-content: space-between; */
   /* padding: auto; */
   /* align-self: stretch; */
-  /* padding: 0 8em; */
+  padding: 0 1em;
 }
 
 .screenContents12 {
