--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -15,7 +15,9 @@
   /* align-self: stretch;
 justify-self: stretch; */
   /* width: 80vw; */
-  height: 89vh;
+  height: 100%;
+  /* height: 10em; */
+  /* height: 89vh; */
   /* overflow: auto; */
   /* justify-content: space-between; */
   align-items: stretch;
