--- a/qwik-app/src/global.css
+++ b/qwik-app/src/global.css
@@ -120,6 +120,12 @@
   --kaBeech-response-text-light: var(--kaBeech-color-cold-fuchsian);
 }
 
+html,
+body,
+main {
+  height: 100%;
+}
+
 body {
   background-color: var(--kaBeech-main-background);
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
@@ -237,6 +243,7 @@ button {
   flex-direction: column;
   align-items: stretch;
   flex: 1;
+  max-height: 100%;
 }
 
 .screenContents {
@@ -245,7 +252,7 @@ button {
   align-self: stretch;
   overflow: auto;
   flex: 1 1 auto;
-  height: 0;
+  /* height: 0; */
   /* justify-content: space-between; */
   /* padding: auto; */
   /* align-self: stretch; */
@@ -258,7 +265,7 @@ button {
   /* align-self: stretch; */
   overflow: auto;
   flex: 1 1 auto;
-  height: 0;
+  /* height: 0; */
   /* justify-content: space-between; */
   /* padding: auto; */
   /* align-self: stretch; */
