--- a/qwik-app/src/components/screen/screen.css
+++ b/qwik-app/src/components/screen/screen.css
@@ -10,7 +10,7 @@
     0 0em 2.5em 0 rgba(1, 90, 125, 0.484);
   /* height: 100%; */
   width: 100%;
-  margin: 0.5em;
+  /* margin: 0.5em; */
   /* padding: 0.1em;  */
   /* align-self: stretch;
 justify-self: stretch; */
