--- a/qwik-app/src/components/hamburger/hamburger.css
+++ b/qwik-app/src/components/hamburger/hamburger.css
@@ -8,6 +8,9 @@
 .lazyalign {
   align-items: center;
   justify-content: space-between;
+
+  /* overflow: auto; */
+  /* max-height: 100%; */
 }
 
 img {
