--- a/qwik-app/src/components/logo/logo.css
+++ b/qwik-app/src/components/logo/logo.css
@@ -21,7 +21,7 @@ img {
     0 0em 2.5em 0 rgba(1, 89, 125, 0.412);
   width: 3.34em;
   aspect-ratio: 1;
-  margin: 0.7em 0.5em;
+  margin: 0.35em 0.5em 0.5em -0.5em;
 }
 
 li {
